Bug 111417 - PPTX: TextBox activeX control locked / read only property is not imported
Summary: PPTX: TextBox activeX control locked / read only property is not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: bhm
URL:
Whiteboard: target:6.1.0
Keywords: difficultyBeginner, easyHack, filter:pptx, skillCpp
Depends on:
Blocks:
 
Reported: 2017-08-06 17:54 UTC by Tamás Zolnai
Modified: 2018-01-31 14:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Document containing a locked text box (34.60 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2017-08-06 17:56 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-08-06 17:54:45 UTC
Description:
In MS Office TextBox controls have a property called Locked which has the same functionality as ReadOnly property in LibreOffice. So import code should import this property.

Steps to Reproduce:
1. Open attached file
2. Design mode should be enabled (Edit -> Design Mode)
3. Check ReadOnly property at the form's Context menu -> Control

Actual Results:  
Locked property is not imported.

Expected Results:
Locked property should be imported as ReadOnly property.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36
Comment 1 Tamás Zolnai 2017-08-06 17:56:03 UTC
Created attachment 135195 [details]
Document containing a locked text box
Comment 2 Tamás Zolnai 2017-08-15 01:17:15 UTC
Let's turn this into a easy hack. The code is here:
oox/source/ole/axcontrol.cxx
Check AxTextBoxModel class.
Also need to check the activex documentation:
https://msdn.microsoft.com/en-us/library/office/cc313125(v=office.12).aspx
Comment 3 bhm 2018-01-23 05:55:17 UTC
taking this over
Comment 4 Commit Notification 2018-01-31 14:11:47 UTC
brian houston morrow committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7d11a1e1f0a282c73204af47e8dfcb767295d597

tdf#111417 Import read only property on ActiveX text box

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.