tdf#111417 Import read only property on ActiveX text box

Change-Id: I45d933ef308fbad31695cfc9f668eced4cd8e1f1
Reviewed-on: https://gerrit.libreoffice.org/48872
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>