sd/qa/unit/activex-controls-tests.cxx
@@ -299,7 +299,7 @@ void SdActiveXControlsTest::testTextBoxProperties()
     CPPUNIT_ASSERT_EQUAL(false, bVScroll);
 
     xPropertySet->getPropertyValue("ReadOnly") >>= bReadOnly;
-    CPPUNIT_ASSERT_EQUAL(false, bReadOnly); //Bugous, should be true (tdf#111417)
+    CPPUNIT_ASSERT_EQUAL(true, bReadOnly);
 
     // Third shape has some other custom properties
     xControlShape.set(getShapeFromPage(2, 0, xDocShRef), uno::UNO_QUERY_THROW);
